--- a/spec/fixtures/responses/delete_users/unauthorized/responds_with_unauthorized.yml
+++ b/spec/fixtures/responses/delete_users/unauthorized/responds_with_unauthorized.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.appboy.com/users/delete
     body:
       encoding: UTF-8
-      string: '{"app_group_id":"non-existent","external_ids":[1,2],"appboy_ids":[]}'
+      string: '{"api_key":"non-existent","external_ids":[1,2],"appboy_ids":[]}'
     headers:
       User-Agent:
       - Faraday v0.12.1
