--- a/spec/fixtures/responses/delete_users/with_success/responds_with_success_message.yml
+++ b/spec/fixtures/responses/delete_users/with_success/responds_with_success_message.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.appboy.com/users/delete
     body:
       encoding: UTF-8
-      string: '{"app_group_id":"<APPBOY_GROUP_ID>","external_ids":[1,2],"appboy_ids":[]}'
+      string: '{"api_key":"<APPBOY_GROUP_ID>","external_ids":[1,2],"appboy_ids":[]}'
     headers:
       User-Agent:
       - Faraday v0.12.1
