--- a/spec/fixtures/responses/export_users/by_segment/with_success/responds_with_created.yml
+++ b/spec/fixtures/responses/export_users/by_segment/with_success/responds_with_created.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.appboy.com/users/export/segment
     body:
       encoding: UTF-8
-      string: '{"app_group_id":"<APPBOY_GROUP_ID>","segment_id":"<APPBOY_TEST_SEGMENT>","callback_endpoint":"https://example.com"}'
+      string: '{"api_key":"<APPBOY_GROUP_ID>","segment_id":"<APPBOY_TEST_SEGMENT>","callback_endpoint":"https://example.com"}'
     headers:
       User-Agent:
       - Faraday v0.9.1
